# pgatour-ai

./: .env.example  .gitignore  AGENTS.md  README.md  biome.json  drizzle.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-06-09T18-34-06-929Z.yml  page-2026-06-09T18-35-06-108Z.yml  page-2026-06-09T18-39-21-411Z.yml
apps/web/: next.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/web/e2e/: smoke.spec.ts
apps/web/src/: proxy.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: intelligence-terminal.tsx  player-portrait.tsx  terminal-primitives.tsx
apps/web/src/hooks/: use-breakpoint.tsx  use-clipboard.ts  use-is-scroll-top.ts  use-media-query.ts  use-mount-effect.ts
docs/: architecture.md  data-contracts.md  ingestion.md  launch-checklist.md  model-methodology.md  product-quality.md  vendor-data-use.md
docs/superpowers/plans/: 2026-06-09-joyco-sidebar.md
docs/superpowers/specs/: 2026-06-09-joyco-sidebar-design.md
infra/: docker-compose.yml
services/ingest/: package.json
services/ingest/src/: ball-dont-lie.test.ts  ball-dont-lie.ts  index.ts  jobs.ts  local-env.ts  raw-snapshots.test.ts  raw-snapshots.ts  result-field-entries.ts  sync-runs.ts
services/modeling/: README.md  pyproject.toml
services/modeling/src/pgatour_ai_modeling/: __init__.py  backtesting.py  cli.py  features.py  inference.py  simulation.py
services/modeling/tests/: test_backtesting.py  test_features.py  test_inference.py
(+147 files in other folders)
