[project]
name = "pgatour-ai-modeling"
version = "0.1.0"
description = "Modeling, simulation, and backtesting scaffold for PGA Tour AI."
requires-python = ">=3.13"
dependencies = [
  "duckdb>=1.4.0",
  "lightgbm>=4.6.0",
  "numba>=0.63.0",
  "numpy>=2.3.0",
  "polars>=1.36.0",
  "psycopg[binary]>=3.2.0",
  "pyarrow>=22.0.0",
  "pydantic>=2.13.0",
  "pymc>=5.27.0",
  "scikit-learn>=1.8.0",
  "scipy>=1.17.0",
]

[project.scripts]
pgatour-ai-modeling = "pgatour_ai_modeling.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
